--- a/.github/workflows/sam-pipeline.yml
+++ b/.github/workflows/sam-pipeline.yml
@@ -22,4 +22,4 @@ jobs:
 # sam deploy
       - run: | 
       sam build
-      sam deploy --no-confirm-changeset --no-fail-on-empty-changeset --stack-name hello-world-go --s3-bucket sudhh-cfg --s3-prefix lambda-zips --capabilities CAPABILITY_IAM --region us-east-1 --force-upload -t .deploy/lambdas/template.yml
+      sam deploy --no-confirm-changeset --no-fail-on-empty-changeset --stack-name hello-world-go --s3-bucket sudhh-cfg --s3-prefix lambda-zips --capabilities CAPABILITY_IAM --region us-east-1 --force-upload
