--- a/.github/workflows/sam-pipeline.yml
+++ b/.github/workflows/sam-pipeline.yml
@@ -20,6 +20,7 @@ jobs:
 # Run Unit tests- Specify unit tests here 
 
 # sam deploy
-      - run: | 
-      sam build
-      sam deploy --no-confirm-changeset --no-fail-on-empty-changeset --stack-name hello-world-go --s3-bucket sudhh-cfg --s3-prefix lambda-zips --capabilities CAPABILITY_IAM --region us-east-1 --force-upload
+      - name: Build and Deploy
+        run: | 
+         sam build
+         sam deploy --no-confirm-changeset --no-fail-on-empty-changeset --stack-name hello-world-go --s3-bucket sudhh-cfg --s3-prefix lambda-zips --capabilities CAPABILITY_IAM --region us-east-1 --force-upload
