--- a/.deploy/lambdas/template.yml
+++ b/.deploy/lambdas/template.yml
@@ -3,7 +3,7 @@ Resources:
   App:
     Type: AWS::Serverless::Function
     Properties:
-      CodeUri: hello/
+      CodeUri: ../../hello/
       Handler: hello
       Runtime: go1.x
       Tracing: Active
