--- a/.github/workflows/sam-pipeline-eventbridge.yml
+++ b/.github/workflows/sam-pipeline-eventbridge.yml
@@ -1,4 +1,3 @@
-# Workflow file
 on:
   push:
     branches:
@@ -8,13 +7,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-go@v2
+      - uses: actions/setup-node@v2
       - uses: aws-actions/setup-sam@v1
       - uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
+      # sam build 
+      - run: sam build --use-container
 
 # Run Unit tests- Specify unit tests here 
 
@@ -22,4 +23,4 @@ jobs:
       - name: Build and Deploy
         run: | 
           sam build
-          sam deploy --no-confirm-changeset --no-fail-on-empty-changeset --stack-name hello-world-go --s3-bucket sudhh-cfg --s3-prefix lambda-zips --capabilities CAPABILITY_IAM --region us-east-1 --force-upload -t .deploy/lambdas/template.yml
+          sam deploy --no-confirm-changeset --no-fail-on-empty-changeset --stack-name hello-world-schedule-go --s3-bucket sudhh-cfg --s3-prefix lambda-zips --capabilities CAPABILITY_IAM --region us-east-1 --force-upload -t .deploy/lambdas/template-schedule.yml
