--- a/.github/workflows/sam-pipeline-eventbridge.yml
+++ b/.github/workflows/sam-pipeline-eventbridge.yml
@@ -20,5 +20,5 @@ jobs:
 # sam deploy
       - name: Build and Deploy
         run: | 
-          sam build -t .deploy/lambdas/template.yml
+          sam build -t .deploy/lambdas/template-schedule.yml
           sam deploy --no-confirm-changeset --no-fail-on-empty-changeset --stack-name hello-world-schedule-go --s3-bucket sudhh-cfg --s3-prefix lambda-zips --capabilities CAPABILITY_IAM --region us-east-1 --force-upload -t .deploy/lambdas/template-schedule.yml
